@@ -2,7 +2,9 @@
 #		Build into package
 #
 
-build:
+all: build
+
+build-dev:
 	mkdir -p dist/bootsetup
 	cp -r debian/* dist/bootsetup/
 	cp -r root/* dist/bootsetup/
@@ -10,7 +12,9 @@ build:
 	gzip --best dist/bootsetup/usr/share/doc/bootsetup/changelog
 	gzip --best dist/bootsetup/usr/share/doc/bootsetup/changelog.Debian
 	cd dist && fakeroot dpkg-deb --build bootsetup
-	#rm -rf dist/bootsetup
 	
+build: build-dev
+	rm -rf dist/bootsetup
+
 clean:
 	rm -rf dist
